<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/name_image_background"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_foodie"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-46dp" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_foodie_login"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserLogin"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.737"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextPassLogin"
        android:layout_width="250dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:text="123456"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/checkboxRememberUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkboxRememberUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@color/white"
        android:text="@string/checkbox_remember_user"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextUserLogin"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="5dp"
        android:hint="@string/edit_text_user"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:text="16359131"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/MainButtonStyle"
        android:layout_width="250dp"
        android:layout_height="62dp"
        android:layout_marginBottom="148dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>