<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialog_bg"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/tVTitleDialogConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tittle_mod_prod"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextNameProdMod"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="@drawable/edittext_background"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/name_product"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextDescProdMod"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="@drawable/edittext_background"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/desc_product"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPriceProdMod"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="@drawable/edittext_background"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/price_product"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:layout_margin="5dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lCBtnModProd"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_secondary_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alert_dialog_ok"
                            android:textColor="@color/accent_color"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView3"
                            app:layout_constraintTop_toTopOf="parent" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lCDelProducts"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_secondary2_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_secondary2_background"
                            app:tint="@color/white"
                            android:padding="2dp"
                            android:src="@drawable/icon_delete"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView5"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.512" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:elevation="10dp"
        android:src="@drawable/ic_launcher_foodie_foreground"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>