<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityInventoryProducts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inventory.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMainActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bottom_nav_background"
            android:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iBArrowBackProduct"
                android:contentDescription="@string/logo_back_arrow"
                android:scaleType="fitCenter"
                android:background="@color/bottom_nav_background"
                android:src="@drawable/icon_arrow_back"/>

            <TextView
                android:id="@+id/tVTitleToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/products"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextSearchProduct"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:autofillHints="name"
                        android:background="@drawable/edittext_background"
                        android:drawableStart="@drawable/icon_search"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:hint="@string/search_edittext"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/divider_color" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rVProducts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>